# firebird-odbc-driver

./: .gitignore  AGENTS.md  AtlStubs.cpp  BUILD_CMAKE.md  CMAKE_CONVERSION.md  CMakeLists.txt  FB_CPP_REPLY.md  FB_CPP_SUGGESTIONS.md  InfoItems.h  Main.cpp  Main.h  MainUnicode.cpp  OdbcConnection.cpp  OdbcConnection.h  OdbcConvert.cpp  OdbcConvert.h  OdbcDesc.cpp  OdbcEnv.cpp  OdbcError.cpp  OdbcError.h  OdbcJdbc.h  OdbcObject.cpp  OdbcObject.h  OdbcStatement.cpp  OdbcStatement.h  QUICKSTART_CMAKE.md  README.md  Utf16Convert.cpp  build-and-test.ps1  build-and-test.sh  dev.ps1  firebird-odbc-driver.build.ps1  run.ps1
.github/workflows/: build-and-test.yml  build.yml  release.yml  rpi_arm64.yml  test.yml
Builds/MsVc2022.win/: OdbcFb.sln  OdbcFb.vcxproj
Docs/: FB_CPP_PLAN.md  FIREBIRD_ODBC_MASTER_PLAN.md  ISSUE-244.md  PERFORMANCE_RESULTS.md  PLAN-NEW-TESTS.md  PLAN.md  README-TESTS.md  firebird-driver-feature-map.md  todo.txt
Headers/: SQLEXT.H
Install/Win32/: OdbcJdbcSetup.iss
IscDbc/: Attachment.h  CMakeLists.txt  Connection.h  IscConnection.cpp  IscConnection.h  IscDbc.h  IscHeadSqlVar.h  IscOdbcStatement.cpp  IscOdbcStatement.h  IscResultSet.h  IscSqlType.cpp  IscStatement.cpp  LoadFbClientDll.cpp  LoadFbClientDll.h  SQLException.h  Sqlda.cpp  TypesResultSet.cpp  TypesResultSet.h
OdbcJdbcSetup/: CMakeLists.txt  DsnDialog.cpp  ServiceClient.cpp  ServiceTabBackup.cpp  ServiceTabRepair.cpp  ServiceTabRestore.cpp  ServiceTabStatistics.cpp  Setup.cpp  UsersTabUsers.cpp
Tests/: test_null_handles.cpp
Tests/Cases/: CatalogTests.cpp  ConnectAttrsTests.cpp  DiagnosticsTests.cpp  EnvAttrsTests.cpp  ErrorMappingTests.cpp  FetchBindingTests.cpp  GetDataTests.cpp  InfoTests.cpp  Issue244Tests.cpp  NullHandleTests.cpp  SqlStateMappingTests.cpp  StatementAttrsTests.cpp  TransactionsTests.cpp  UnicodeTests.cpp
Tests/Fixtures/: TestBase.cpp  TestBase.h
Tests/OdbcTests/: OdbcTests.vcxproj  pch.h
src/: DescRecord.cpp  MainUnicode.cpp  OdbcConnection.cpp  OdbcConvert.cpp  OdbcConvert.h  OdbcDesc.cpp  OdbcError.cpp  OdbcObject.cpp  OdbcObject.h  OdbcStatement.cpp  OdbcStatement.h  SetupAttributes.h  Utf16Convert.cpp
src/IscDbc/: Attachment.cpp  CMakeLists.txt  IscConnection.cpp  IscResultSet.cpp  IscResultSet.h  ServiceManager.cpp  Value.cpp
tests/: CMakeLists.txt  test_batch_params.cpp  test_catalog.cpp  test_catalogfunctions.cpp  test_connect_options.cpp  test_connection.cpp  test_data_types.cpp  test_descriptor.cpp  test_errors.cpp  test_escape_sequences.cpp  test_main.cpp  test_null_handles.cpp  test_phase11_typeinfo_timeout_pool.cpp  test_phase7_crusher_fixes.cpp  test_wchar.cpp
